Add load data and clear all cache redis